Fix gallery overflowing images

--- a/components/Gallery.module.css
+++ b/components/Gallery.module.css
@@ -55,6 +55,7 @@
 
 	.image {
 		height: 150px;
+		max-width: 80vw;
 	}
 }
 
